data/derived/comb/progs/unify/prog2161.ml.out
Characters 127-128:
  n [] digit;;
  ^
Error: This expression has type int
       This is not a function; it cannot be applied.
